--- a/BattleInfoPlugin/Properties/Resources.en.resx
+++ b/BattleInfoPlugin/Properties/Resources.en.resx
@@ -118,94 +118,90 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Air_Supremacy_Denial" xml:space="preserve">
-    <value>航空劣勢</value>
+    <value>Air Denial (AD)</value>
   </data>
   <data name="Air_Supremacy_Incapability" xml:space="preserve">
-    <value>制空権損失</value>
+    <value>Air Incapability (AI)</value>
   </data>
   <data name="Air_Supremacy_None" xml:space="preserve">
-    <value>航空戦なし</value>
+    <value>None</value>
   </data>
   <data name="Air_Supremacy_Parity" xml:space="preserve">
-    <value>航空均衡</value>
+    <value>Air Parity (AP)</value>
   </data>
   <data name="Air_Supremacy_Superiority" xml:space="preserve">
-    <value>航空優勢</value>
+    <value>Air Superiority (AS+)</value>
   </data>
   <data name="Air_Supremacy_Supremacy" xml:space="preserve">
-    <value>制空権確保</value>
+    <value>Air Supremacy (AS)</value>
   </data>
   <data name="Battle_Info" xml:space="preserve">
-    <value>戦闘情報</value>
+    <value>Battle Info</value>
   </data>
   <data name="Battle_Situation" xml:space="preserve">
-    <value>交戦形態:</value>
+    <value>Engagement Form:</value>
   </data>
   <data name="Battle_Situation_HeadOn" xml:space="preserve">
-    <value>反航戦</value>
+    <value>Head-on Engagement</value>
   </data>
   <data name="Battle_Situation_None" xml:space="preserve">
-    <value>なし</value>
+    <value>None</value>
   </data>
   <data name="Battle_Situation_Parallel" xml:space="preserve">
-    <value>同航戦</value>
+    <value>Parallel Engagement</value>
   </data>
   <data name="Battle_Situation_TAdv" xml:space="preserve">
-    <value>T字有利</value>
+    <value>Crossing the T - Advantage (Green T)</value>
   </data>
   <data name="Battle_Situation_TDis" xml:space="preserve">
-    <value>T字不利</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="ConfirmPursuit" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ConfirmPursuit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Crossing the T - Disadvantage (Red T)</value>
   </data>
   <data name="Enemy_Fleet_Button" xml:space="preserve">
-    <value>既知の敵一覧</value>
+    <value>Known Enemy Formations</value>
   </data>
   <data name="Formation_Combined_Anti_Sub" xml:space="preserve">
-    <value>対潜陣形</value>
+    <value>Combined Anti-Sub</value>
   </data>
   <data name="Formation_Combined_Circle" xml:space="preserve">
-    <value>輪形陣形</value>
+    <value>Combined Circle (AA)</value>
   </data>
   <data name="Formation_Combined_Forward" xml:space="preserve">
-    <value>前方陣形</value>
+    <value>Combined Forward</value>
   </data>
   <data name="Formation_Combined_Line_Ahead" xml:space="preserve">
-    <value>戦闘陣形</value>
+    <value>Combined Line Ahead</value>
   </data>
   <data name="Formation_Diamond" xml:space="preserve">
-    <value>輪形陣</value>
+    <value>Diamond</value>
   </data>
   <data name="Formation_Double_Line" xml:space="preserve">
-    <value>複縦陣</value>
+    <value>Double Line</value>
   </data>
   <data name="Formation_Echelon" xml:space="preserve">
-    <value>梯形陣</value>
+    <value>Echelon</value>
   </data>
   <data name="Formation_Line_Abreast" xml:space="preserve">
-    <value>単横陣</value>
+    <value>Line Abreast (ASW)</value>
   </data>
   <data name="Formation_Line_Ahead" xml:space="preserve">
-    <value>単縦陣</value>
+    <value>Line Ahead</value>
   </data>
   <data name="Formation_None" xml:space="preserve">
-    <value>なし</value>
+    <value>None</value>
   </data>
   <data name="Formation_Unknown" xml:space="preserve">
-    <value>不明</value>
+    <value>Unknown</value>
   </data>
   <data name="New_Window_Button" xml:space="preserve">
-    <value>在新窗口中显示</value>
+    <value>Open in New Window</value>
   </data>
   <data name="Notify_Battle_End" xml:space="preserve">
-    <value>戦闘終了通知</value>
+    <value>Notify on Battle Completion</value>
   </data>
   <data name="Notify_Inactive" xml:space="preserve">
-    <value>非アクティブ時のみ通知</value>
+    <value>Notify Only if Inactive</value>
   </data>
   <data name="Show_LBAS_Check" xml:space="preserve">
-    <value>显示陆基航空队Stage信息</value>
+    <value>Show LBAS Combat Stage</value>
   </data>
 </root>
