--- a/BattleInfoPlugin/Properties/Resources.resx
+++ b/BattleInfoPlugin/Properties/Resources.resx
@@ -307,4 +307,7 @@
   <data name="Formation_Vanguard" xml:space="preserve">
     <value>警戒陣</value>
   </data>
+  <data name="Cell_Type_Anchorage" xml:space="preserve">
+    <value>泊地</value>
+  </data>
 </root>
